
version 1.2.0:
	* Yahoo file receiving and buddy icon receiving work again.
	* Limit animated buddy icon frame rates to 10 frames per second
	  (Nathan Conrad)
	* Fix a bug where portions of your account configuration would
	  fail to be read correctly if you set a proxy user name or
	  password containing invalid XML characters such as < and >
	  (Bastien Durel)

version 1.1.4 (2/24/2005):
	* Fixed a bug where Yahoo! would lose messages (and any other packet
	  really)
	* Correctly show the time when incoming Gadu-Gadu messages were sent
	  (Carl-Daniel Hailfinger)
	* Fixed crashes with glib 2.6
	* Fixed MSN crash when conversations time out after the conversation
	  window was closed
	* Fixed an html parsing bug, CAN-2005-0208

version 1.1.3 (2/17/2005):
	* CHAP authentication support for SOCKS5 proxies (Malcolm Smith)
	* ICQ offline messages are sent using your specified character
	  set instead of Unicode (Magnus Hult)
	* MSN HTTP method works with proxies using authentication (Bastien Durel)
	* Really fix the bug where buddies show as logged in for 49 thousand days
	* Buddy pounces containing '&' are saved correctly
	* Improved MSN error handling when the servers are unavailable
	* More MSN bug fixes
	* Fix some leaks
	* Fix "Find" in the log viewer so that it finds in all logs
	* Smileys not appearing at the end of lines has been fixed
	* Closing conversation windows no longer cancels active file transfers on
	  MSN (Felipe Contreras)

version 1.1.2 (1/20/2005):
	* MSN 'HTTP Method' fixed (Felipe Contreras)
	* Better handling of MSN's Individuals group and buddy status updates
	  (Felipe Contreras)
	* Fix a crash inviting MSN user to a chat when they're already there
	* AIM SecurID login support
	* Fix configuration of Jabber chat rooms on some servers
	* More MSN bug fixes (Felipe Contreras)
	* Fix queue messages to Docklet when not globally away (Robert McQueen)
	* Fix some leaks
	* The Autopackage now builds both the mozilla-nss and the gnutls